# TEST

./: .gitignore  Cargo.toml  LICENSE  README.md  doc_header.html
.cargo/: config.toml
bits/: Cargo.toml  README.md
bits/examples/: usage.rs
bits/src/: lib.rs
crates/circuit/: Cargo.toml
crates/cnot_parity_matrix/: Cargo.toml
crates/core/: Cargo.toml
crates/simulator/: Cargo.toml
datasets/: README.md  unpickler.py
datasets/molecules/: BeH2_BK_631g.exp  BeH2_BK_sto3g.exp  BeH2_JW_631g.exp  BeH2_JW_sto3g.exp  BeH2_P_631g.exp  C2H4_BK_sto3g.exp  C2H4_JW_sto3g.exp  C2H4_P_sto3g.exp  C2_BK_sto3g.exp  C2_JW_sto3g.exp  C2_P_sto3g.exp  CH2_BK_631g.exp  CH2_JW_631g.exp  CH2_JW_sto3g.exp  CH2_P_631g.exp  CO2_BK_sto3g.exp  CO2_JW_sto3g.exp  CO2_P_sto3g.exp  H2CO_BK_sto3g.exp  H2CO_JW_sto3g.exp  H2CO_P_sto3g.exp  H2O_BK_631g.exp  H2O_JW_631g.exp  H2O_JW_sto3g.exp  H2O_P_631g.exp  H2_BK_sto3g.exp  H2_P_631g.exp  H4_BK_631g.exp  H4_JW_631g.exp  H4_JW_sto3g.exp  H4_P_631g.exp  H4_P_sto3g.exp  H8_BK_sto3g.exp  H8_JW_sto3g.exp  H8_P_sto3g.exp  HCl_BK_631g.exp  HCl_BK_sto3g.exp  HCl_JW_631g.exp  HCl_JW_sto3g.exp  HCl_P_631g.exp  (+18 more)
datasets/molecules_small/: BeH2_P_sto3g.exp  CH2_BK_sto3g.exp  CH2_P_sto3g.exp  H2O_BK_sto3g.exp  H2O_P_sto3g.exp  H2_BK_631g.exp  H2_JW_631g.exp  H2_JW_sto3g.exp  H2_P_sto3g.exp  H4_BK_sto3g.exp  LiH_BK_sto3g.exp  NH3_JW_sto3g.exp  NH_BK_sto3g.exp  NH_JW_sto3g.exp
examples/: contest.rs  generate_random.rs  perf_test.rs  random.rs  sanxbox.rs  tableau_exploring.rs  tableau_testing.rs
examples/correctness_test/: .gitignore  checker.py  main.rs
examples/draw/: main.rs
examples/random/: .gitignore  (+1 more)
src/: draw.rs  lib.rs  misc.rs  pauli.rs  synthesize.rs
(+755 files in other folders)
