[package]
name = "test_transpiler"
version = "0.0.1"
edition = "2024"

[lib]

[dependencies]
bitvec = "1.0.1"
petgraph = "0.8.2"

[dev-dependencies]
rand = "0.9.1"
rand_chacha = "0.9.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./doc_header.html"]

[features]
default = []
# Synthesize returns the original exponentials in the order selected during synthesize
return_ordered = []

[lints.clippy]
tabs_in_doc_comments = "allow"

[[example]]
name = "correctness_test"
required-features = ["return_ordered"]
