[package]
name = "test_transpiler"
version = "0.0.1"
edition = "2024"

[workspace]
members = ["crates/*"]

[lib]

[workspace.dependencies]
rand = "0.10.1"
rand_chacha = "0.10.0"

[dependencies]
bits = { path = "crates/bits" }
petgraph = "0.8.3"
rand.workspace = true
rand_chacha.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./doc_header.html"]

[features]
default = []
# Synthesize returns the original exponentials in the order selected during synthesize
return_ordered = []

[[example]]
name = "correctness_test"
required-features = ["return_ordered"]
